--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   
 
        
-    <section class="quote-section">
+    <section class="quote-bonus-section">
       <div class="scheduler">
         <p class="quote-title">GET A <span class="fancy-green">QUOTE</span></p>
         <div class="contact-section">
