--- a/index.html
+++ b/index.html
@@ -354,11 +354,12 @@
         </div>
 
         <div class="footer-section">
-          <h4>Ressources</h4>
+          <h4>Resources</h4>
           <p>Read Our Blog</p>
       </div>
-      <p class="rights"> © 2024 by WeMow. All rights reserved. </p>
     </div>
+    <p class="rights"> © 2024 by WeMow. All rights reserved. </p>
+    
 </footer>
   
     
