--- a/service.html
+++ b/service.html
@@ -38,7 +38,7 @@
         }
 
         .logo img {
-            height: 250px;
+            height: 190px;
             width: auto;
         }
 
@@ -143,9 +143,10 @@
         }
 
         .main-section h1 {
-            font-size: 24px;
-            color: #222;
+            font-size: 30px;
+            color: #416c29;
             margin-bottom: 20px;
+            text-align: left;
         }
 
         .main-section h2 {
@@ -295,11 +296,11 @@
 
         /* For Firefox */
         * {
-            scrollbar-width: thin;
+            scrollbar-width: thick;
             scrollbar-color: #416c29 #f1f1f1;
         }
 
-        
+
 
         
     </style>
@@ -309,7 +310,7 @@
 
     <header>
         <div class="logo">
-            <img src="WeMowLogo.png" alt="Your Company Logo">
+            <img src="Video/WElgrb.png" alt="Your Company Logo">
         </div>
         <div class="hamburger">
             <div class="line"></div>
@@ -330,15 +331,13 @@
         <p>
             <a href="#home" style="color: #3c8c44;">Home</a>
             <a> / </a>
-            <a href="#service" style="color: #3c8c44;">Service</a>
-            <a> / </a>
             <span>Lawn Care</span>
         </p>
 
         <h1>LAWN CARE AND MOWING TO HELP BUSINESS PROPERTY OWNERS</h1>
 
         <div class="service-image">
-            <img src="Grasscut2.jpg" alt="Lawn Mower Image">
+            <img src="Video/Grasscut2.jpg" alt="Lawn Mower Image">
         </div>
 
         <p>Achieve the perfect lawn with exceptional lawn care solutions for business property owners in Mobile. When you get our services, you can rest assured that your lawn care will get the attention it deserves.</p>
@@ -385,7 +384,7 @@
 
     <script>
         const hamburger = document.querySelector(".hamburger");
-        const navBar = document.querySelector(".nav-bar");A
+        const navBar = document.querySelector(".nav-bar");
 
         hamburger.addEventListener("click", () => {
             navBar.classList.toggle("active");
