--- a/service.html
+++ b/service.html
@@ -105,7 +105,7 @@
                 width: 100vw;
                 transition: 0.5s;
                 overflow: hidden;
-                background-color: white;
+                background-color: rgb(185, 88, 88);
             }
 
             .nav-bar.active {
