--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p>Keep your lawn looking pristine and well-maintained with our professional lawn mowing services. We offer customized care for every yard to ensure a perfect cut every time.</p>
           <div class="lawn-button-container">
               <a href="get-quote.html" class="lawn-quote-button">Get a Quote</a>
-              <a href="services.html" class="lawn-service-button">View Service</a>
+              <a href="Service(LawnCare).html" class="lawn-service-button">View Service</a>
           </div>
       </div>
     </section>
@@ -342,7 +342,7 @@
     </div>
     <div class="footer-container">
         <!-- Call Us Section -->
-      <div class="footerfiller"></div>
+        <div class="footerfiller"></div>
         <div class="footer-section">
             <h4>Call us:</h4>
             <p>1-800-000-0000</p>
