--- a/Blog(LawnCare).html
+++ b/Blog(LawnCare).html
@@ -251,8 +251,8 @@
             transform: scale(1.1);
         }
 
-         /* Chat Button */
-         .chat-button {
+         /* Chat Button (Joe HTML Code) */
+        .chat-button {
             position: fixed;
             bottom: 20px;
             right: 20px;
@@ -417,7 +417,7 @@
         &copy; 2024 WeMow. All Rights Reserved.
     </footer>
 
-    <!-- Chat Button -->
+    <!-- Chat Button Joe (CSS & JavaScript) -->
     <button id="chatBtn" class="chat-button">Sign Up!</button>
 
     <!-- Modal (Overlay) -->
@@ -435,7 +435,7 @@
       </div>
     </div>
 
-    <script>
+    <script> 
         const hamburger = document.querySelector(".hamburger");
         const navBar = document.querySelector(".nav-bar");
 
